[XForms] NPOTDB implement xpath function context() for xforms 1.1. Bug 418734, p=msterlin r=olli+aaronr