extensions/xforms/nsXFormsUtils.cpp
@@ -565,8 +565,14 @@ nsXFormsUtils::EvaluateXPath(const nsAString        &aExpression,
                                                                aContextNode);
   NS_ENSURE_TRUE(state, NS_ERROR_OUT_OF_MEMORY);
 
+  // If the XPath expression contains a function name that differs from its
+  // internal name, translate the external name to the internal name.
+  nsAutoString expr;
+  rv = TranslateExpression(aExpression, expr);
+  NS_ENSURE_SUCCESS(rv, rv);
+
   nsCOMPtr<nsIDOMXPathExpression> expression;
-  rv = CreateExpression(evalInternal, aExpression, resolver, state,
+  rv = CreateExpression(evalInternal, expr, resolver, state,
                         getter_AddRefs(expression));
 
   PRBool throwException = PR_FALSE;
@@ -600,7 +606,7 @@ nsXFormsUtils::EvaluateXPath(const nsAString        &aExpression,
         rv = analyzer.Analyze(aContextNode,
                               xNode,
                               nsExpr,
-                              &aExpression,
+                              &expr,
                               aSet,
                               aContextPosition,
                               aContextSize,
@@ -662,9 +668,15 @@ nsXFormsUtils::EvaluateXPath(nsIXPathEvaluatorInternal  *aEvaluator,
                              nsIDOMXPathResult          *aInResult,
                              nsIDOMXPathResult         **aResult)
 {
+  // If the XPath expression contains a function name that differs from its
+  // internal name, translate the external name to the internal name.
+  nsAutoString expr;
+  nsresult rv = TranslateExpression(aExpression, expr);
+  NS_ENSURE_SUCCESS(rv, rv);
+
   nsCOMPtr<nsIDOMXPathExpression> expression;
-  nsresult rv = CreateExpression(aEvaluator, aExpression, aResolver, aState,
-                                 getter_AddRefs(expression));
+  rv = CreateExpression(aEvaluator, expr, aResolver, aState,
+                        getter_AddRefs(expression));
   NS_ENSURE_SUCCESS(rv, rv);
 
   nsCOMPtr<nsIDOMNSXPathExpression> nsExpression =
@@ -3184,3 +3196,31 @@ nsXFormsUtils::IsCardNumber(const nsAString& aNumber)
 
   return sum % 10 == 0;
 }
+
+/* static */ nsresult
+nsXFormsUtils::TranslateExpression(const nsAString& aExpression, nsAString& aResult)
+{
+  aResult.Truncate();
+
+  // context() is a valid XPath function but context is a reserved word
+  // in .idl so we rename it to contextNode() if it exists.
+  NS_NAMED_LITERAL_STRING(contextExpr, "context()");
+  PRInt32 start = aExpression.Find(contextExpr);
+
+  if (start != kNotFound) {
+    if (start > 0) {
+      // Append any part of the expression before 'context()'
+      aResult.Append(Substring(aExpression, 0, start));
+    }
+    // Replace 'context()' with 'contextNode()'
+    aResult.AppendLiteral("contextNode()");
+    if (start + contextExpr.Length() < aExpression.Length()) {
+      // Append any remaining part of the expression after 'context()'
+      aResult.Append(Substring(aExpression, start + contextExpr.Length()));
+    }
+  } else {
+    aResult = aExpression;
+  }
+  return NS_OK;
+}
+
